# report_assistant

./: .gitignore  README.md  docker-compose.yml  global.yaml  pipeline.py  pyproject.toml  run.py
data/: index.json
data/index/: documents.json
data/questions/Amazon/: amazon_10-k-item1a.json
data/questions/Microsoft/: 2024_Annual_Report.json
data/reports/Amazon/: .~lock.amazon_10-k-item1a.docx#  amazon_10-k-item1a.docx  amazon_10-k-item7.docx
deepeval_eval/: eval_rag.py  example_test.py  example_test_set.py  manual_basic.py  ollama_eval_model.py  test_example.py  test_set.py
notebooks/: explore_data.ipynb
output/chunks/: Microsoft.json
output/company__microsoft/chunks/: microsoft_2024_annual_report.json
output/company__microsoft/text/: microsoft_2024_annual_report.md
pipelines/: __init__.py  demo_chunking.py  text_pipeline.py
report_assistant/: chunk.py  data_classes.py  embed.py  llm.py
report_assistant/chunking/: algorithms.py  chunk.py  convert_to_markdown.py
report_assistant/chunking/strategies/: ChunkStrategy.py  ChunkStrategyFixedSize.py  ChunkStrategySentence.py  ChunkStrategySentenceMetadata.py  __init__.py
report_assistant/utils/: load_utils.py  utils.py
tests/: test.py
